// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loginLink returns /login link 1`] = `
Object {
  "href": "/login",
  "label": "header.login",
}
`;

exports[`loginLink returns link with absolute URL 1`] = `
Object {
  "href": "https://www.healthcare.gov/login",
  "label": "header.login",
}
`;

exports[`loginLink returns link with deConsumer param 1`] = `
Object {
  "href": "/login?check_de=1",
  "label": "header.login",
}
`;
